# metatron

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  context.md  glama.json  metatron-sync.sh  metatron.toml  metatron_feedback_reminder.py  metatron_setup.sh  metatron_setup_files.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.roo/rules/: metatron.md
context/: README.md
context/candidate/: mcp-logic-separate-from-server.md  no-global-synonym-maps.md  prompt-format-constraint-last.md  repo-identity-from-remote.md  reserved-files-never-become-decisions.md  resolve-context-dir-never-hardcode.md  storage-behind-interface.md  webui-no-build-step.md
context/decisions/: extraction-structural-signals-only.md  files-mode-ui-never-commits.md  human-gated-canonical-boundary.md  network-checks-fail-silent.md  release-verify-with-no-cache.md  skill-source-repo-pristine.md  webui-smoke-kill-by-port.md  webui-stdlib-no-framework.md
docs/: future-features.md  retrieval-eval-prompt.md  verification.md
docs/designs/: 2026-06-01-feedback-loop.md  2026-06-01-feedback-refinement.md  2026-06-03-decision-helpfulness-rating.md  2026-06-03-prior-helpfulness-rating.md  2026-06-06-employee-attribution.md  2026-06-06-per-repo-database-split.md  2026-06-08-impact-refinement-trace.md  2026-06-09-curation-ux-improvements.md  2026-06-09-version-and-update-notice.md  2026-06-16-git-mirror-okf.md  2026-07-14-review-gate.md  2026-07-21-repository-verification-layer.md
docs/incidents/: 2026-06-01-homepage-decisions-for-payments-query.md  2026-06-01-homepage-priors-for-payments-query.md
docs/plans/: 2026-06-06-per-repo-database-split.md  2026-06-09-curation-ux-improvements.md  2026-06-09-version-and-update-notice.md  2026-06-16-git-mirror-okf.md
metatron/: __init__.py  cli.py  config.py  context_setup.py  events.py  feedback_score.py  identity.py  models.py  pipeline.py  pricing.py  repo_identity.py  version.py
metatron/extraction/: __init__.py  enrich.py  extractor.py  feedback_refiner.py  prompts.py  provider.py  signals.py  triage.py
metatron/filesfirst/: __init__.py  counts.py  document.py  fields.py  index.py  ledger.py  lint.py  report.py  schema.py  trailers.py
metatron/gitlog/: __init__.py  reader.py
metatron/mcp_server/: __init__.py  server.py  service.py
metatron/mirror/: __init__.py  export.py  okf.py  (+3 more)
tests/: conftest.py  test_agent_activity.py  test_catalog.py  test_catalog_stores.py  test_cli.py  test_cli_catalog_e2e.py  test_cli_export.py  test_cli_files.py  test_cli_mirror.py  test_config.py  test_context_setup.py  test_dockerfile.py  test_enrich.py  test_event_store.py  test_extraction.py  test_feedback_analytics.py  test_feedback_model.py  test_feedback_refiner.py  test_feedback_reminder_hook.py  test_feedback_score.py  test_feedback_service.py  test_filesfirst_counts.py  test_filesfirst_document.py  test_filesfirst_fields.py  test_filesfirst_index.py  test_filesfirst_ledger.py  test_filesfirst_lint.py  test_filesfirst_report.py  test_filesfirst_schema.py  test_filesfirst_trailers.py  test_gitlog_reader.py  test_identity.py  test_import.py  test_ingest_job.py  test_ingest_run_store.py  test_jsts_parser.py  test_mcp_server.py  test_mcp_service.py  test_migrate.py  test_mirror_export.py  (+32 more)
(+62 files in other folders)
