[project]
name = "metatron"
version = "0.1.0"
description = "Capture a codebase's implementation decisions as structured priors and serve them to coding agents over MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "mcp>=1.27.2",
    "pydantic>=2.6",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
metatron = "metatron.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metatron"]

[tool.pytest.ini_options]
testpaths = ["tests"]
