[project]
# Distribution name on PyPI is "getmetatron" (the name "metatron" was taken); the
# import package and the CLI command are still "metatron" (see scripts + wheel below).
name = "getmetatron"
version = "0.3.0"
description = "Capture a codebase's implementation decisions as structured decisions and serve them to coding agents over MCP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "mcp>=1.27.2",
    "pydantic>=2.6",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.urls]
Homepage = "https://getmetatron.com"
Repository = "https://github.com/kerbelp/metatron"

[project.scripts]
metatron = "metatron.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metatron"]

[tool.pytest.ini_options]
testpaths = ["tests"]
