[project]
# Distribution name on PyPI is "getmetatron" (the name "metatron" was taken); the
# import package and the CLI command are still "metatron" (see scripts + wheel below).
name = "getmetatron"
version = "0.10.0"
description = "Capture a codebase's implementation decisions as structured decisions and serve them to coding agents over MCP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "mcp>=1.27.2",
    "pydantic>=2.6",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.urls]
Homepage = "https://getmetatron.com"
Repository = "https://github.com/kerbelp/metatron"

[project.scripts]
metatron = "metatron.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metatron"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Default rule set (pyflakes + pycodestyle errors), minus E731: small named
# lambdas for per-item scoring terms are an established idiom here.
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
# Tests group imports with the section of tests that uses them.
"tests/*" = ["E402"]
